main-nav on small screen fixed

--- a/css/main.css
+++ b/css/main.css
@@ -9432,29 +9432,27 @@ footer .footer-call_number {
   }
 }
 @media only screen and (max-width: 992px) {
-  /* line 56, ../sass/_media.scss */
-  nav.main-nav.navbar-default {
-    background: #293684;
-  }
-  /* line 58, ../sass/_media.scss */
+  /* line 57, ../sass/_media.scss */
   nav.main-nav.navbar-default ul.nav.navbar-nav {
+    display: block;
     margin: 0;
   }
   /* line 61, ../sass/_media.scss */
   nav.main-nav.navbar-default li {
     width: 100%;
+    padding-left: 25%;
   }
-  /* line 64, ../sass/_media.scss */
+  /* line 65, ../sass/_media.scss */
   nav.main-nav.navbar-default a {
     margin: 0 auto;
   }
 
-  /* line 68, ../sass/_media.scss */
+  /* line 69, ../sass/_media.scss */
   section.privileges {
     margin-bottom: 2.5rem;
   }
 
-  /* line 71, ../sass/_media.scss */
+  /* line 72, ../sass/_media.scss */
   .memo-item,
   .special-serv_item {
     width: 100%;
@@ -9462,54 +9460,54 @@ footer .footer-call_number {
     margin-bottom: 1.5rem;
     padding-bottom: 0;
   }
-  /* line 77, ../sass/_media.scss */
+  /* line 78, ../sass/_media.scss */
   .memo-item:last-child,
   .special-serv_item:last-child {
     margin-bottom: 0;
   }
 
-  /* line 81, ../sass/_media.scss */
+  /* line 82, ../sass/_media.scss */
   .funner-cost_item {
     width: 49.4845%;
     margin-right: 1.031%;
     margin-bottom: 1.5rem;
   }
-  /* line 85, ../sass/_media.scss */
+  /* line 86, ../sass/_media.scss */
   .funner-cost_item:nth-child(2n) {
     margin-right: 0;
   }
 
-  /* line 89, ../sass/_media.scss */
+  /* line 90, ../sass/_media.scss */
   .privileges-item {
     width: 49.4845%;
     margin-right: 1.031%;
     margin-bottom: 1.5rem;
   }
-  /* line 93, ../sass/_media.scss */
+  /* line 94, ../sass/_media.scss */
   .privileges-item:nth-child(2n) {
     margin-right: 0;
   }
 
-  /* line 97, ../sass/_media.scss */
+  /* line 98, ../sass/_media.scss */
   footer .footer-info,
   footer .footer-call {
     width: 100%;
     text-align: center;
   }
 
-  /* line 102, ../sass/_media.scss */
+  /* line 103, ../sass/_media.scss */
   footer .footer-info,
   footer .footer-call_title {
     font-size: 1.8rem;
   }
 }
 @media only screen and (max-width: 767px) {
-  /* line 110, ../sass/_media.scss */
+  /* line 111, ../sass/_media.scss */
   .special-serv .item-description {
     padding: 0;
   }
 
-  /* line 113, ../sass/_media.scss */
+  /* line 114, ../sass/_media.scss */
   .funner-cost_item,
   .privileges-item,
   .funner-free_item,
@@ -9518,7 +9516,7 @@ footer .footer-call_number {
     margin-right: 0;
     margin-bottom: 1.5rem;
   }
-  /* line 120, ../sass/_media.scss */
+  /* line 121, ../sass/_media.scss */
   .funner-cost_item:last-child,
   .privileges-item:last-child,
   .funner-free_item:last-child,
@@ -9526,42 +9524,42 @@ footer .footer-call_number {
     margin-bottom: 0;
   }
 
-  /* line 124, ../sass/_media.scss */
+  /* line 125, ../sass/_media.scss */
   .header-contact .header-contact_link {
     text-align: center !important;
     margin-bottom: 30px;
   }
 
-  /* line 128, ../sass/_media.scss */
+  /* line 129, ../sass/_media.scss */
   .special-serv_item {
     margin-bottom: 30px;
   }
-  /* line 130, ../sass/_media.scss */
+  /* line 131, ../sass/_media.scss */
   .special-serv_item .item-description {
     font-size: 110%;
   }
 
-  /* line 134, ../sass/_media.scss */
+  /* line 135, ../sass/_media.scss */
   .funner-cost_item {
     font-size: 1.8rem;
   }
 
-  /* line 137, ../sass/_media.scss */
+  /* line 138, ../sass/_media.scss */
   .privileges .item-wrapper {
     padding-bottom: 0;
   }
 
-  /* line 140, ../sass/_media.scss */
+  /* line 141, ../sass/_media.scss */
   .privileges-item_cost {
     position: static;
   }
 
-  /* line 143, ../sass/_media.scss */
+  /* line 144, ../sass/_media.scss */
   .privileges-item_description {
     font-size: 120%;
   }
 
-  /* line 146, ../sass/_media.scss */
+  /* line 147, ../sass/_media.scss */
   .funner-free_banner {
     background: none;
     padding-top: 3%;
